[package]
name = "patron"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Laeufer <laeufer@berkeley.edu>"]
description = "Hardware bug-finding toolkit."
readme = "Readme.md"
homepage = "https://kevinlaeufer.com"
license = "BSD-3-Clause"
license-file = "LICENSE"
keywords = ["RTL", "btor", "model-checking", "SMT", "bit-vector"]


[dependencies]
string-interner = "0.14.0"
indexmap = "2.0.0"
smallvec = "1.11.0"
codespan-reporting = "0.11.1"
fuzzy-matcher = "0.3.7"
lazy_static = "1.4.0"