[package]
name = "patronus"
version = "0.19.1"
edition = "2021"
authors = ["Kevin Laeufer <laeufer@berkeley.edu>"]
description = "Hardware bug-finding toolkit."
readme = "Readme.md"
repository = "https://github.com/ekiwi/patron"
homepage = "https://kevinlaeufer.com"
license = "BSD-3-Clause"
keywords = ["RTL", "btor", "model-checking", "SMT", "bit-vector"]
exclude = [".github/", ".gitignore"]

[dependencies]
indexmap = "2.0.0"
codespan-reporting = "0.11.1"
fuzzy-matcher = "0.3.7"
lazy_static = "1.4.0"
easy-smt = "0.2.1"
num-bigint = "0.4.4"
num-traits = "0.2.17"
num-integer = "0.1.45"
# used for simulator initialization
rand = { version = "0.8.5", default-features = false }
rand_xoshiro = "0.6.0"
smallvec = "1.11.2"
baa = { version = "0.12.0", features = ["bigint"] }

[dev-dependencies]
clap =  { version = "4.4.8", features = ["derive"] }
insta = { version = "1.34.0", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3

[profile.release]
debug = true
